--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8 #?????
 server:
-  port: 9191
+  port: 9090
   servlet:
     context-path: /api
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true # 开启驼峰命名，自动匹配数据库里面的内容
